# imagemine

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  main.py  pyproject.toml
.claude/: settings.local.json
.github/workflows/: ci.yml
imagemine.app/Contents/: Info.plist
imagemine.app/Contents/MacOS/: droplet
imagemine.app/Contents/Resources/Scripts/: main.scpt
imagemine.app/Contents/_CodeSignature/: CodeResources
imagemine.scptd/Contents/: Info.plist
imagemine.scptd/Contents/Resources/Scripts/: main.rtf
src/imagemine/: __init__.py  __main__.py  _album.py  _character_mapping.py  _commands.py  _config.py  _constants.py  _core.py  _db.py  _describe.py  _display.py  _generate.py  _image.py  _launchd.py  _photos.py  _pipeline.py  _progress.py  _styles.py  cli.py
tests/: conftest.py  test_album.py  test_character_mapping.py  test_choose_style.py  test_cli.py  test_commands.py  test_commands_styles_cli_more.py  test_config.py  test_db.py  test_display_generate_describe.py  test_image.py  test_json_output.py  test_launchd.py  test_photos_protocol.py  test_pipeline.py  test_progress.py  test_styles.py
