[project]
name = "imagemine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "gemimg>=0.4.0",
    "pillow>=12.1.1",
]

[project.scripts]
imagemine = "imagemine.cli:main"

[dependency-groups]
dev = [
    "black>=26.3.0",
    "pyrefly>=0.55.0",
    "pytest>=8.4.2",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py311"

lint.select = ["ALL"]
lint.ignore = ["D107", "D203", "D213", "S608", "T201"]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
