[project]
name = "imagemine"
version = "0.5.0"
description = "CLI tool to transform photos into AI-generated re-imagined artwork via Claude and Gemini"
readme = "README.md"
license = { text = "Apache-2.0" }
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.84.0",
    "gemimg>=0.4.0",
    "pillow>=12.1.1",
    "rich>=14.3.3",
]
authors = [
    { name = "Harold Martin", email = "Harold.Martin@gmail.com" },
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Science/Research",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Image Processing",
    "Topic :: Utilities",
    "Typing :: Typed",
]
keywords = [
    "image",
    "llm",
    "ai",
    "extraction",
    "anthropic",
    "claude",
    "multimodal",
    "gemini",
    "generative-ai",
    "image-generation",
    "artwork",
    "photos",
    "automation",
    "scheduled",
    "cli",
]

[project.urls]
Homepage = "https://github.com/hbmartin/imagemine"
Repository = "https://github.com/hbmartin/imagemine"
Issues = "https://github.com/hbmartin/imagemine/issues"

[build-system]
requires = ["uv_build>=0.10.9"]
build-backend = "uv_build"

[project.scripts]
imagemine = "imagemine.cli:main"

[dependency-groups]
dev = [
    "black>=26.3.0",
    "codecov>=2.1.13",
    "lizard>=1.21.2",
    "pyrefly>=0.55.0",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.15.5",
    "ty>=0.0.21",
]

[tool.pytest.ini_options]
pythonpath = ["src"]

[tool.coverage.run]
relative_files = true

[tool.black]
line-length = 88
target-version = ["py314"]

[tool.ruff]
# Exclude a variety of commonly ignored directories.
exclude = [".bzr", ".direnv", ".eggs", ".git", ".git-rewrite", ".hg", ".ipynb_checkpoints", ".mypy_cache", ".nox", ".pants.d", ".pyenv", ".pytest_cache", ".pytype", ".ruff_cache", ".svn", ".tox", ".venv", ".vscode", "__pypackages__", "_build", "buck-out", "build", "dist", "node_modules", "setup.py", "site-packages", "venv"]

# Same as Black.
line-length = 88
indent-width = 4
target-version = "py314"

lint.select = ["ALL"]
lint.ignore = ["BLE001", "D107", "D203", "D213", "S608", "T201"]

[tool.ruff.lint.per-file-ignores]
"src/imagemine/_styles.py" = ["E501"]  # long prompt strings
"src/imagemine/_describe.py" = ["E501"]  # long prompt strings
"src/imagemine/_album.py" = ["E501", "S603"]
"src/imagemine/_progress.py" = ["ARG002"]  # NullProgressReporter must match protocol signature
"tests/**/*.py" = [
    "ANN",    # Type annotations not required in tests
    "D",      # Docstrings not required in tests
    "S101",   # assert is expected in tests
    "SLF001", # Private member access is fine in tests
]

[tool.ruff.format]
# Same as Black.
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
line-ending = "auto"
